src/objects/XO_Follow_Up_Tracking__c.object
<CustomObject>
    <description>Follow Up Tracking is the latest production object that is location (profile) specific allowing for tracking of referrals, tasks and other items that require workflow reminders.</description>
    <fields>
        <fullName>Acupuncture_internal__c</fullName>
        <label>Acupuncture internal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Referrals made to our internal acupuncturist</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_Immunology__c</fullName>
        <label>Allergy / Immunology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Allergy / Immunology Austin 1</fullName>
                </value>
                <value>
                    <fullName>Allergy / Immunology Austin 2</fullName>
                </value>
                <value>
                    <fullName>Allergy / Immunology Cup 1</fullName>
                </value>
                <value>
                    <fullName>Allergy / Immunology Cup 2</fullName>
                </value>
                <value>
                    <fullName>Allergy and Asthma Associates of Northern California - Dr. Leung</fullName>
                </value>
                <value>
                    <fullName>Allergy and Asthma Associates of Northern California - Dr. Wolfe</fullName>
                </value>
                <value>
                    <fullName>Davidson, Jeffery MD</fullName>
                </value>
                <value>
                    <fullName>Dr. Cummings</fullName>
                </value>
                <value>
                    <fullName>Dr. Daniel Ramirez, Jr.</fullName>
                </value>
                <value>
                    <fullName>Dr. Dennis Dilley</fullName>
                </value>
                <value>
                    <fullName>Dr. John Mastrovich</fullName>
                </value>
                <value>
                    <fullName>Dr. Robert Ramirez</fullName>
                </value>
                <value>
                    <fullName>Michel Laham</fullName>
                </value>
                <value>
                    <fullName>PAMF - Dr. Fischer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergy_Patient__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allergy Patient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ancillary_Care__c</fullName>
        <label>Internal Referral</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_For_Follow_Up__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Apple Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Apple Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Apple Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Apple Dermatology</fullName>
                </value>
                <value>
                    <fullName>Apple Dietitian</fullName>
                </value>
                <value>
                    <fullName>Apple Massage</fullName>
                </value>
                <value>
                    <fullName>Apple Physical Therapy</fullName>
                </value>
                <value>
                    <fullName>Apple Sleep Medicine</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Chiropractic</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Dietitian</fullName>
                </value>
                <value>
                    <fullName>Ergonomics</fullName>
                </value>
                <value>
                    <fullName>Health Coach</fullName>
                </value>
                <value>
                    <fullName>Massage</fullName>
                </value>
                <value>
                    <fullName>MedFit</fullName>
                </value>
                <value>
                    <fullName>Medical Fitness</fullName>
                </value>
                <value>
                    <fullName>Optometry</fullName>
                </value>
                <value>
                    <fullName>Physical Therapy</fullName>
                </value>
                <value>
                    <fullName>Primary Care (Internal Referral, new patient)</fullName>
                </value>
                <value>
                    <fullName>Primary Care (Internal Referral)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cardiology_Options__c</fullName>
        <label>Cardiology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Austin Cardiology 1</fullName>
                </value>
                <value>
                    <fullName>Austin Cardiology 2</fullName>
                </value>
                <value>
                    <fullName>Cupertino Cardiology 2</fullName>
                </value>
                <value>
                    <fullName>Dr. Abram Rabinowitz - Interventional</fullName>
                </value>
                <value>
                    <fullName>Dr. Amistead Wellford - Cardiovascular Disease</fullName>
                </value>
                <value>
                    <fullName>Dr. John Canales - Interventional</fullName>
                </value>
                <value>
                    <fullName>Dr. Jose Triana - Cardiovascular Disease</fullName>
                </value>
                <value>
                    <fullName>Dr. Kiran Cheruku - Interventional</fullName>
                </value>
                <value>
                    <fullName>Dr. Michael Kwan - Cardiovascular Disease</fullName>
                </value>
                <value>
                    <fullName>Dr. Philip Zinn - Cardiovascular Disease</fullName>
                </value>
                <value>
                    <fullName>Francos, Richard MD / Blumlein, Steven MD / Hui, Peter MD / Bryan Ristow, MD</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley Cardiology - Dr. Benedick</fullName>
                </value>
                <value>
                    <fullName>Silicon Valley Cardiology - Dr. Sinclair</fullName>
                </value>
                <value>
                    <fullName>Stanford Cardiology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chiro_internal__c</fullName>
        <label>Chiro internal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>REferrals made to our internal chirporactor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinic_Name_for_Survey_Subject_Line__c</fullName>
        <formula>CASE(RecordTypeId, 
&quot;012E0000000V3Y1&quot;, &quot;Apple Wellness Center&quot;, 
&quot;012E0000000V3Y6&quot;, &quot;Apple Wellness Center&quot;,
&quot;0120L000000697Z&quot;, &quot;Apple Sacramento&quot;, 
&quot;012E0000000VcLT&quot;, &quot;AMP Wellness Center&quot;, 
&quot;012E0000000VIMk&quot;, &quot;AMP Wellness Center&quot;, 
&quot;012E0000000V3YB&quot;, &quot;Facebook Health Center&quot;,
&quot;012E0000000DFhR&quot;, &quot;Magenta Health Center&quot;,
&quot;012E0000000DFhW&quot;, &quot;Magenta Health Center&quot;,
&quot;012E0000000Vhrb&quot;, &quot;Near Site Health Center Mountain View&quot;,
&quot;012E0000000Vhs0&quot;, &quot;Near Site Health Center Mountain View&quot;,
&quot;012E0000000DFnZ&quot;, &quot;Crossover Wellness Center&quot;,
&quot;Wellness Center&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Clinic Name for Survey Subject Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dermatology__c</fullName>
        <label>Dermatology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Berman Gladstone Skin Institute - Dr. Berman</fullName>
                </value>
                <value>
                    <fullName>Berman Gladstone Skin Institute - Dr. Gladstone</fullName>
                </value>
                <value>
                    <fullName>Crane Street Dermatology</fullName>
                </value>
                <value>
                    <fullName>Crane Street Dermatology - Dr. Blumenkranz</fullName>
                </value>
                <value>
                    <fullName>Crane Street Dermatology - Dr. Longaker</fullName>
                </value>
                <value>
                    <fullName>Dermatology Austin 1</fullName>
                </value>
                <value>
                    <fullName>Dermatology Austin 2</fullName>
                </value>
                <value>
                    <fullName>Dermatology Cup 2</fullName>
                </value>
                <value>
                    <fullName>Dr. Emily Fridlington</fullName>
                </value>
                <value>
                    <fullName>Dr. Gregory Thompson</fullName>
                </value>
                <value>
                    <fullName>Dr. Kim Ross</fullName>
                </value>
                <value>
                    <fullName>Dr. Raul Vela</fullName>
                </value>
                <value>
                    <fullName>Dr. Robert Ochs</fullName>
                </value>
                <value>
                    <fullName>Dr. Tuffanelli</fullName>
                </value>
                <value>
                    <fullName>Drs Miller, Tara and Starr, Jon</fullName>
                </value>
                <value>
                    <fullName>Menlo Dermatology Medical Group - Dr. Bogomilsky</fullName>
                </value>
                <value>
                    <fullName>Menlo Dermatology Medical Group - Dr. Hoffman</fullName>
                </value>
                <value>
                    <fullName>PHC Provider</fullName>
                </value>
                <value>
                    <fullName>Stanford Dermatology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ENT__c</fullName>
        <label>ENT</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ENT Austin 1</fullName>
                </value>
                <value>
                    <fullName>ENT Austin 2</fullName>
                </value>
                <value>
                    <fullName>Stanford ENT</fullName>
                </value>
                <value>
                    <fullName>ENT Cup 2</fullName>
                </value>
                <value>
                    <fullName>ENT FB1</fullName>
                </value>
                <value>
                    <fullName>ENT FB2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>employer1</fullName>
                </value>
                <value>
                    <fullName>employer2</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Intuit</fullName>
                </value>
                <value>
                    <fullName>Synopsys</fullName>
                </value>
                <value>
                    <fullName>Symantec</fullName>
                </value>
                <value>
                    <fullName>Veritas</fullName>
                </value>
                <value>
                    <fullName>Nvidia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endocrinology__c</fullName>
        <label>Endocrinology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Anderson, Mark MD</fullName>
                </value>
                <value>
                    <fullName>Dr. Firas Akhrass</fullName>
                </value>
                <value>
                    <fullName>Dr. Harry Uy</fullName>
                </value>
                <value>
                    <fullName>Dr. Jacob Vadakekalam</fullName>
                </value>
                <value>
                    <fullName>Dr. Mark Kipnes</fullName>
                </value>
                <value>
                    <fullName>Dr. Richard Becker</fullName>
                </value>
                <value>
                    <fullName>Dr. Sherwyn Schwartz</fullName>
                </value>
                <value>
                    <fullName>Endocrinology Austin 1</fullName>
                </value>
                <value>
                    <fullName>Endocrinology Austin 2</fullName>
                </value>
                <value>
                    <fullName>Endocrinology Cup 2</fullName>
                </value>
                <value>
                    <fullName>Menlo Medical - Dr. Sklarin</fullName>
                </value>
                <value>
                    <fullName>PAMF - Dr. Clewans</fullName>
                </value>
                <value>
                    <fullName>PAMF - Dr. Kaye</fullName>
                </value>
                <value>
                    <fullName>PAMF - Dr. Porzig</fullName>
                </value>
                <value>
                    <fullName>Stanford Endocrinology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Follow_Up_Status__c</fullName>
        <label>Follow Up Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gastroenterology__c</fullName>
        <label>Gastroenterology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dr. Ravi Botla</fullName>
                </value>
                <value>
                    <fullName>Dr. Ravi Ganeshappa</fullName>
                </value>
                <value>
                    <fullName>Dr. Richard Otero</fullName>
                </value>
                <value>
                    <fullName>GI Austin 1</fullName>
                </value>
                <value>
                    <fullName>GI Austin 2</fullName>
                </value>
                <value>
                    <fullName>GI Cup 2</fullName>
                </value>
                <value>
                    <fullName>Stanford GI</fullName>
                </value>
                <value>
                    <fullName>Stewart Weisman, MD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Imaging__c</fullName>
        <label>Imaging</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_For_Follow_Up__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Addison Gilbert Hospital</fullName>
                </value>
                <value>
                    <fullName>ARA Diagnostic Imaging</fullName>
                </value>
                <value>
                    <fullName>Cardiografix</fullName>
                </value>
                <value>
                    <fullName>Center for Diagnostic Imaging (CDI)</fullName>
                </value>
                <value>
                    <fullName>CPMC</fullName>
                </value>
                <value>
                    <fullName>Dipa Patel, M.D.</fullName>
                </value>
                <value>
                    <fullName>Dominican Hospital</fullName>
                </value>
                <value>
                    <fullName>DRI</fullName>
                </value>
                <value>
                    <fullName>El Camino Imaging</fullName>
                </value>
                <value>
                    <fullName>Good Sam Breast Center</fullName>
                </value>
                <value>
                    <fullName>Good Sam DEXA Scan</fullName>
                </value>
                <value>
                    <fullName>Health Diagnostics</fullName>
                </value>
                <value>
                    <fullName>Imaging Austin 1</fullName>
                </value>
                <value>
                    <fullName>Imaging Austin 2</fullName>
                </value>
                <value>
                    <fullName>Insight Imaging</fullName>
                </value>
                <value>
                    <fullName>M&amp;S</fullName>
                </value>
                <value>
                    <fullName>Mammography Spec Med Corp</fullName>
                </value>
                <value>
                    <fullName>O&apos;Connor Hospital</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PAMF</fullName>
                </value>
                <value>
                    <fullName>Peninsula Diagnostics Imaging</fullName>
                </value>
                <value>
                    <fullName>SimonMed</fullName>
                </value>
                <value>
                    <fullName>Stanford Imaging Center</fullName>
                </value>
                <value>
                    <fullName>Sunnyvale Imaging Center</fullName>
                </value>
                <value>
                    <fullName>Sutter</fullName>
                </value>
                <value>
                    <fullName>UC Davis</fullName>
                </value>
                <value>
                    <fullName>UCSF</fullName>
                </value>
                <value>
                    <fullName>Valley Radiology (VRI)</fullName>
                </value>
                <value>
                    <fullName>WRI (Palo Alto Imaging)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lumeris_ID__c</fullName>
        <label>Lumeris ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Specialty__c</fullName>
        <label>Medical Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_For_Follow_Up__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Acu - Internal</fullName>
                </value>
                <value>
                    <fullName>Adolescent Medicine</fullName>
                </value>
                <value>
                    <fullName>Allergy</fullName>
                </value>
                <value>
                    <fullName>Allergy / Immunology</fullName>
                </value>
                <value>
                    <fullName>Allergy/Immunology - Greater Austin Allergy</fullName>
                </value>
                <value>
                    <fullName>Allergy/Immunology - Other</fullName>
                </value>
                <value>
                    <fullName>Allergy/Immunology - TX Allergy Center</fullName>
                </value>
                <value>
                    <fullName>Allergy and Asthma</fullName>
                </value>
                <value>
                    <fullName>Anesthesia / Pain Management</fullName>
                </value>
                <value>
                    <fullName>Audiology</fullName>
                </value>
                <value>
                    <fullName>Bariatrics</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Behavioral Health - Internal</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardiology - Cardiovascular Specialists of Texas</fullName>
                </value>
                <value>
                    <fullName>Cardiology - Dr. Arsenian</fullName>
                </value>
                <value>
                    <fullName>Cardiology - Dr. Fotini Chalkias</fullName>
                </value>
                <value>
                    <fullName>Cardiology - Dr. Sinha (Menlo Medical)</fullName>
                </value>
                <value>
                    <fullName>Cardiology - Dr. Tom Vinson</fullName>
                </value>
                <value>
                    <fullName>Cardiology - Other</fullName>
                </value>
                <value>
                    <fullName>Cardiology - Silicon Valley Cardiology</fullName>
                </value>
                <value>
                    <fullName>Cardiothoracic Surgery</fullName>
                </value>
                <value>
                    <fullName>CHIP</fullName>
                </value>
                <value>
                    <fullName>Chiro - Internal</fullName>
                </value>
                <value>
                    <fullName>Colorectal Surgery</fullName>
                </value>
                <value>
                    <fullName>Dental</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Dermatology - Dr. Rosy Chaata</fullName>
                </value>
                <value>
                    <fullName>Dermatology - Ladera Park Dermatology</fullName>
                </value>
                <value>
                    <fullName>Dermatology - Lone star Dermatology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Neurology__c</fullName>
        <label>Neurology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Dr. Ann Bass</fullName>
                </value>
                <value>
                    <fullName>Dr. Arnold Vardiman - Neuro Surgeon</fullName>
                </value>
                <value>
                    <fullName>Dr. Christopher Bogaev - Neuro Surgeon</fullName>
                </value>
                <value>
                    <fullName>Dr. Donald Hilton - Neuro Surgeon</fullName>
                </value>
                <value>
                    <fullName>Dr. Frank Fichtel - Neuro Surgeon</fullName>
                </value>
                <value>
                    <fullName>Dr. Wilson, Dr. Kreiss, Dr. Khosla</fullName>
                </value>
                <value>
                    <fullName>Neurology Austin 1</fullName>
                </value>
                <value>
                    <fullName>Neurology Austin 2</fullName>
                </value>
                <value>
                    <fullName>Neurology Cup2</fullName>
                </value>
                <value>
                    <fullName>Stanford Neuro</fullName>
                </value>
                <value>
                    <fullName>TBD - CC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Nurse_Follow_Up__c</fullName>
        <label>Nurse Follow Up</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Reason_For_Follow_Up__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Blood Draw</fullName>
                </value>
                <value>
                    <fullName>Blood Pressure Check</fullName>
                </value>
                <value>
                    <fullName>Ear Wash</fullName>
                </value>
                <value>
                    <fullName>Immunization</fullName>
                </value>
                <value>
                    <fullName>Medical Records</fullName>
                </value>
                <value>
                    <fullName>TB Read</fullName>
                </value>
                <value>
                    <fullName>Wound Care</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OB_Gyn__c</fullName>
        <label>OB/Gyn</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Institute for Women&apos;s Health</fullName>
                </value>
                <value>
                    <fullName>Lonestar OB/GYN Associates</fullName>
                </value>
                <value>
                    <fullName>Mission Trail OB Gyn Associates</fullName>
                </value>
                <value>
                    <fullName>OB/Gyn Austin 1</fullName>
                </value>
                <value>
                    <fullName>OB/Gyn Austin2</fullName>
                </value>
                <value>
                    <fullName>OB/Gyn Cup2</fullName>
                </value>
                <value>
                    <fullName>OB/Gyn FB1</fullName>
                </value>
                <value>
                    <fullName>OB/Gyn FB2</fullName>
                </value>
                <value>
                    <fullName>Stanford OB/Gyn</fullName>
                </value>
                <value>
                    <fullName>Women Partners in OB/GYN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ophthalmology__c</fullName>
        <label>Ophthalmology</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Ophthalmology Austin 1</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology Austin2</fullName>
                </value>
                <value>
                    <fullName>Stanford Ophthalmology</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology Cup 2</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology FB1</fullName>
                </value>
                <value>
                    <fullName>Ophthalmology FB2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Orthopedic__c</fullName>
        <label>Orthopedic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Medical_Specialty__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Orthopedic Austin1</fullName>
                </value>
                <value>
                    <fullName>Orthopedic Austin2</fullName>
                </value>
                <value>
                    <fullName>Stanford Orthopaedic</fullName>
                </value>
                <value>
                    <fullName>Orthopedic Cup2</fullName>
                </value>
                <value>
                    <fullName>SOAR - Lehnert, Bruce (Podiatry)</fullName>
                </value>
                <value>
                    <fullName>Dr. Charles Pipkin (Spine)</fullName>
                </value>
                <value>
                    <fullName>Dr. Joel Jenne (Spine)</fullName>
                </value>
                <value>
                    <fullName>Dr. Paul Geibel (Spine)</fullName>
                </value>
                <value>
                    <fullName>Dr. Gilbert Meadows (Spine)</fullName>
                </value>
                <value>
                    <fullName>Dr. Adam Harris (Knee / Hip)</fullName>
                </value>
                <value>
                    <fullName>Dr. Amanda Marshall (Knee / Hip)</fullName>
                </value>
                <value>
                    <fullName>Dr. Peter Holmes (Knee)</fullName>
                </value>
                <value>
                    <fullName>Dr. Scott Sledge (Shoulder)</fullName>
                </value>
                <value>
                    <fullName>Dr. Stace Rust (Hand)</fullName>
                </value>
                <value>
                    <fullName>Dr. Mark Casillas (Foot)</fullName>
                </value>
                <value>
                    <fullName>Dr. Donald Hilton (Complex Cases)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PREP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is Patient participating in the PREP program?</description>
        <inlineHelpText>Is Patient participating in the PREP program?</inlineHelpText>
        <label>PREP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PT_internal__c</fullName>
        <label>PT internal</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Referrals made to our internal physical therapy department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>XO Follow Up Tracking</relationshipLabel>
        <relationshipName>XO_Follow_Up_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patient_DOB__c</fullName>
        <label>Patient DOB</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Patient_Email__c</fullName>
        <label>Patient Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Patient_First_Name__c</fullName>
        <label>Patient First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Phone__c</fullName>
        <label>Patient Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Patient__c</referenceTo>
        <relationshipLabel>XO Follow Up Tracking</relationshipLabel>
        <relationshipName>XO_Follow_Up_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Urgent</fullName>
                </value>
                <value>
                    <fullName>Diagnostic</fullName>
                </value>
                <value>
                    <fullName>Screening</fullName>
                </value>
                <value>
                    <fullName>Routine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>